bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  var c = a*b
  if(c<0){
    if(!negative){
      return true
    } else {
      return false
    }
 }else if (a<0){
    if(negative){
      return false
    } else{return true}
  }
}

  